--- a/index.html
+++ b/index.html
@@ -81,7 +81,17 @@
     <div class="section-container">
       <h1 class="heading">About</h1>
       <p class="paragraph-contains">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      s
+    
+    </div>
+    <div class="container">
+      <div class="format">
+        <img src="team2.jpg" alt="team2" class="image-format">
+        <h1 class="name">John Doe</h1>
+        <h2 class="proffesion">CEO & Founder</h2>
+        <p class="paragraph">Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+        <button class="button">Contact</button>
+      </div>
+
     </div>
    </div>
 
